<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        style="@style/sectionHeader"
        android:text="@string/exporter"
        android:paddingTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_exporter"
        android:id="@+id/export_button"
        android:layout_gravity="center_horizontal"
        android:onClick="doExport" />

    <TextView
        style="@style/sectionHeader"
        android:text="@string/Importer"
        android:paddingTop="20dp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:onClick="doImport"
            android:text="@string/action_importer" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/import_button"
            android:layout_toRightOf="@+id/import_button"
            android:onClick="doDelete"
            android:text="@string/action_delete" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/delete_button"
            android:layout_toRightOf="@+id/delete_button"
            android:onClick="doSendFile"
            android:text="@string/action_send_file" />
    </RelativeLayout>


</LinearLayout>
